2004-02-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sqlucode.h (SQLGetStmtAttr[AW]): Remove duplicate
	defines.
	(SQLSetStmtAttr[AW]): Move into ODBCVER >= 0x0300 block.
	(SQLSetDescFieldW): Correct prototype.
	(SQLSetDescFieldA): Add prototype.
	(SQLGetDescFieldW): Add prototype.

2004-02-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* include/winuser.h (DFC_POPUPMENU): Add define.

2004-02-07  Dan Aloni  <da-x@gmx.net>

	* lib/ddk/ntoskrnl.def (KeSetTimer,KeSetTimerEx): Correct
	suffix.

2004-02-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oleacc.h (LIBID_Accessibility): Declare.
	* lib/uuid.c (LIBID_Accessibility): Define.

2004-02-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winioctl.h (NTFS_VOLUME_DATA_BUFFER): Add structure.
	(FSCTL_GET_NTFS_VOLUME_DATA): Add macro.

2004-02-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (ICC_STANDARD_CLASSES, ICC_LINK_CLASS): Add
	defines.

2004-01-31  Jiri Malak  <Jiri.Malak@geac.cz>

	* include/winuser.h (RT_MANIFEST): Make conditional on
	RC_INVOKED.
	(CREATEPROCESS_MANIFEST_RESOURCE_ID,
	ISOLATIONAWARE_MANIFEST_RESOURCE_ID,
	ISOLATIONAWARE_NOSTATICIMPORT_MANIFEST_RESOURCE_ID): Add
	defines.

2004-01-16 Martin Fuchs  <martin-fuchs@gmx.net>

	* include/shlobj.h (SHGDN_INCLUDE_NONFILESYS): Add define.

2004-01-15  Filip Navara  <xnavara@volny.cz>

	* include/ddk/mcd.h: Don't care about value of DBG define.
	* include/ddk/srb.h: Ditto.
	* include/ddk/storport.h: Ditto.
	* include/ddk/video.h: Ditto.
	* include/nspapi.h (SetServiceW, GetAddressByNameA,
	GetAddressByNameW): Correct protoype.
	* include/ntsecapi.h (PCUNICODE_STRING): Define.

2004-01-05  Filip Navara  <xnavara@volny.cz>

	* include/prsht.h (LPCPROPSHEETPAGEW): Fix definition.
	* include/shlwapi.h (SHRegQueryInfoUSKey[AW]): Fix prototype.
	* include/cpl.h (CPL_STARTWPARMS[AW]): Correct.
	* include/shellapi.h (ABS_AUTOHIDE, ABS_ALWAYSONTOP,